it is the six commit

--- a/src/app/door/door.module.css
+++ b/src/app/door/door.module.css
@@ -1,7 +1,7 @@
 
 .main_section{
     position: relative;
-    background-image: url("/AP26.jpg");
+    background-image: url("/AP26.avif");
 
    
 }
