it is the fourth commit

--- a/src/app/styles/herosection.module.css
+++ b/src/app/styles/herosection.module.css
@@ -2,7 +2,7 @@
 
 .main_section{
     position: relative;
-    background-image: url("/AP10.jpg");
+    background-image: url("/APS31.avif");
     background-size: 90% 90%;
    
 }
