--- a/src/app/door/door.module.css
+++ b/src/app/door/door.module.css
@@ -69,7 +69,8 @@
 }
 
 .custom-shape-divider-bottom-1697878009 .shape-fill {
-    fill: #FFFFFF;
+    fill: #ffffff;
+    border: 0;
 }
 @media screen and (max-width:768px) {
 
